Fixed bug #35570 (segfault when re-using soap client object)